# wiqaya

./: .gitignore  LICENSE  README-ar.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
data/: en.txt
src/wiqaya/: __init__.py  filter.py  utils.py
src/wiqaya/data/: ar.txt
tests/: test_filter.py  test_utils.py
