[project]
name = "wiqaya"
version = "0.2.2"
description = "A Python library for multilingual profanity detection and filtering. It identifies and censors offensive or abusive words across multiple languages."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ahmed Nagi"},
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.package-data]
wiqaya = ["data/*.txt"]
